--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@stitches/react": "^1.2.8",
     "jotai": "^1.8.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.0"
   },
   "devDependencies": {
     "@types/node": "^18.7.16",
