--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jotai": "^1.8.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.35.0",
     "react-router-dom": "^6.4.0"
   },
   "devDependencies": {
