--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.35.0",
-    "react-router-dom": "^6.4.0"
+    "react-router-dom": "^6.4.0",
+    "zustand": "^4.1.1"
   },
   "devDependencies": {
     "@types/node": "^18.7.16",
