--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/colors": "^0.1.8",
     "@stitches/react": "^1.2.8",
     "jotai": "^1.8.3",
+    "nanoid": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.35.0",
