--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/colors": "^0.1.8",
     "@stitches/react": "^1.2.8",
+    "@tanstack/react-table": "^8.5.13",
     "jotai": "^1.8.3",
     "nanoid": "^4.0.0",
     "react": "^18.2.0",
