--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/colors": "^0.1.8",
+    "@radix-ui/react-toast": "^1.0.0",
     "@stitches/react": "^1.2.8",
     "@tanstack/react-table": "^8.5.13",
     "jotai": "^1.8.3",
