feat: global search and sorting arrow icon animated

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-toast": "^1.0.0",
     "@stitches/react": "^1.2.8",
+    "@tanstack/match-sorter-utils": "^8.5.14",
     "@tanstack/react-table": "^8.5.13",
+    "@tanstack/table-core": "^8.5.15",
     "jotai": "^1.8.3",
     "nanoid": "^4.0.0",
     "react": "^18.2.0",
