--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@nicoka/modal": "^2.0.2",
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-toast": "^1.0.0",
     "@stitches/react": "^1.2.8",
